--- a/EmitterSearch/app.css
+++ b/EmitterSearch/app.css
@@ -72,6 +72,7 @@ background-color:white;
 border-radius: 2rem 2rem 0 0;
 border-top:solid 0.25rem #DC143C;
 bottom: 0vh; 
+margin: 0 auto;
 padding: 1rem;
 position:fixed;
 text-align: center;
